# Liouville_Solver_nD

./: .gitignore  00_MAIN.cu  Adapt_Mesh.cuh  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CSRS_Search.cuh  Classes.cuh  Debugging.cuh  Dynamics.cuh  FULL_SIMULATION.cu  Global_Declarations.cuh  Impulse_transformations.cuh  LICENSE.md  Makefile  Mat_Ops.cuh  Parameter_distributions.cuh  README.md  README.txt  SRStree.cpp  SRStree.h  SRStree_CPU.cpp  SRStree_CPU.h  SRStree_GPU.cu  SRStree_GPU.h  Simulation_parameters.cuh  case_definition.json  runSimulator.py  setSimulator.py  settings.json
BUILD_FILES/Release/: CMakeCache.txt  Makefile  Simulation  cmake_install.cmake
BUILD_FILES/Release/Configured/: Makefile  cmake_install.cmake
Definition_examples/: 0_README.txt  10_Mathieu  10_Mathieu.cuh  1_Linear_Eq.cuh  1_Linear_Eq.txt  2_Duffing_System.cuh  2_Duffing_System.txt  3_Allelochemicals_System.cuh  3_Allelochemicals_System.txt  4_VanDerPol_System.cuh  4_VanDerPol_System.txt  5_Fitzhugh_Nagumo_System.cuh  5_Fitzhugh_Nagumo_System.txt  6__SIR_model.cuh  6__SIR_model.txt  7_Compartmental.cuh  7_Compartmental.txt  8__Four_Dim.cuh  8__Four_Dim.txt  Muelle_subAmortiguado.cuh  Muelle_subAmortiguado.txt  README.md  delta_impulse_test.json  mathieu.json  mathieu_borderline.json  mathieu_near_4.json  mathieu_prod.json  sir_prod.json  sir_prod_8.json  vdp_prod.json  vdp_tests.json  vdp_tests_diiferent_steps.json  vdp_tests_near_7.json  vdp_tests_near_7y5_sigma_N.json
SOURCE_FILES/: 00_MAIN.cu  Adapt_Mesh.cuh  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Case_definition.cuh  Classes.cuh  Constants.cuh  Debugging.cuh  Domain.cuh  Dynamics.cuh  FULL_SIMULATION.cu  IVP_SOLVER.cu  Impulse_transformations.cuh  Integrator.cuh  Interpolation.cuh  Liouville_iteration.cuh  Makefile  Mat_Ops.cuh  Parameter_distributions.cuh  PointSearch.cuh  Probability.cuh  Sim_data.cuh  Simulation_parameters.cuh  ivpSolver.cuh  progressbar.cuh  target_toolchain.cmake
SOURCE_FILES/Configured/: CMakeLists.txt  config.hpp.in
SOURCE_FILES/indicators/: block_progress_bar.hpp
Visualization_matlab/: 1D_Linear.mat  AMR.m  COMPARE_3D.m  COMPARE_SOLS.asv  COMPARE_SOLS.m  ComputeRegion.asv  ComputeRegion.m  Conf_Lvl_Find.m  ImpulseVisual.m  MarginalPlots.m  MultiLevelWvlt.m  PeaksFile.fig  READ_CPP.m  READ_CPP_1D.m  READ_CPP_2D.m  READ_CPP_3D.asv  READ_CPP_3D.m  Read_ME.m  Read_VdP.m  StatInfo.m  Stats.m  TwoDimWavelet.m
app/: CMakeLists.txt  main.cpp  main.cu
configured/: config.hpp.in
ext/: README.md
include/: Adapt_Mesh.cuh  Case_definition.cuh  Debugging.cuh  Domain.cuh  Impulse_transformations.cuh  Integrator.cuh  Probability.cuh  Sim_data.cuh  ivpSolver.cuh
include/checkers/: input_type_check.cuh
include/indicators/: progress_bar.hpp  setting.hpp
include/utils/: numeric_defs.cuh  others.cuh  paths.cuh  window.cuh
src/: Adapt_Mesh.cu  CMakeLists.txt  Domain.cu  Impulse_transformations.cu  Integrator.cu  Interpolation.cu  Makefile  PointSearch.cu  Probability.cu  Sim_data.cu  Simulation_parameters.cu  ivpSolver.cu  main.cu
src/adaptiveMeshRefinement/: Adapt_Mesh.cpp  Adapt_Mesh.cu  Adapt_Mesh.cuh  Adapt_Mesh.hpp  README.md
src/include/: Adapt_Mesh.cuh  Case_definition.cuh  Case_definition.hpp  Domain.cuh  Impulse_transformations.cuh  Integrator.cuh  Interpolation.cuh  PointSearch.cpp  PointSearch.cu  PointSearch.cuh  PointSearch.hpp  Probability.cuh  Sim_data.cuh  Simulation_parameters.cuh  cudaBase.cuh  headers.cuh  headers.hpp  ivpSolver.cuh
src/include/checkers/: input_type_check.cuh  input_type_check.hpp
src/include/utils/: cudaBase.hpp  error_functs.cuh  error_msgs.cuh  headersCpp.hpp  numeric_defs.cuh  others.cuh  paths.cuh  window.cuh
src/integrators/: Impulse_transformations.cpp  Impulse_transformations.cu  Impulse_transformations.cuh  Impulse_transformations.hpp  Integrator.cpp  Integrator.cu  Integrator.cuh  Integrator.hpp  README.md
src/interpolation/: CSRBF.hpp  Interpolation.cpp  Interpolation.cu  Interpolation.cuh  Interpolation.hpp  README.md  Remeshing.hpp
src/ivpSolver/: README.md  Sim_data.cpp  Sim_data.cu  Sim_data.hpp  Simulation_parameters.cpp  Simulation_parameters.cu  Simulation_parameters.cuh  Simulation_parameters.hpp  ivpSolver.cpp  ivpSolver.cu  ivpSolver.cuh  ivpSolver.hpp
src/mesh/: Domain.cpp  Domain.cu  Domain.cuh  Domain.hpp  Particle.cpp  Particle.cu  Particle.cuh  Particle.hpp  README.md
src/probabilityDistributions/: Probability.cpp  Probability.cu  Probability.cuh  Probability.hpp  README.md
src/terminal/: terminal.hpp
src/waveletTransform/: README.md  waveletTransform.cpp  waveletTransform.cu  waveletTransform.cuh  waveletTransform.hpp
test/: CMakeLists.txt  test_adaptiveMeshRefinement.cpp  test_adaptiveMeshRefinement.cu  test_waveletTransform.cpp  test_waveletTransform.cu
