cmake_minimum_required(VERSION 3.22)

set(CMAKE_HOST_SYSTEM Windows)

# IMPORTANT: HERE WE DEFINE THE VARIABLES TO BE USED THROUGHOUT THE CMAKE FILE
set(PROJECT_NAME    LIOUVILLE_EQ_SOLVER)
set(EXECUTABLE_NAME Simulation)
set(LIB_NAME        Solver_Lib)
set(MY_SOURCE_DIR  ${CMAKE_SOURCE_DIR})

project(${PROJECT_NAME} VERSION 4.0.0 LANGUAGES CXX CUDA)

set(CMAKE_CXX_STANDARD          17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS        ON)
set(CMAKE_CUDA_ARCHITECTURES    60 70 80)

find_package(OpenMP)

if(CMAKE_HOST_SYSTEM MATCHES "Windows")
    include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
endif()

# SUPER IMPORTANT FOR CUDA PROJECTS
set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)

add_subdirectory(configured)
add_subdirectory(src)
add_subdirectory(app)
